[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "qleap"
version = "0.1.4"
authors = [
    { name = "Jonathan Le", email = "jonathan.le@uconn.edu" },
    { name = "Avery Hogrefe", email = "avery.hogrefe@uconn.edu" }
]
description = "Accessable quantum programming interface for quantum computing education and research."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "qiskit>=1.0,<2.0",
    "qiskit-aer>=0.13,<1.0"
]

[project.urls]
"Homepage" = "https://github.com/LejoLevan/qleap"
"Documentation" = "https://lejolevan.github.io/qleap/"
"Issues" = "https://github.com/LejoLevan/qleap/issues"